--- a/.devcontainer/docker-compose.yaml
+++ b/.devcontainer/docker-compose.yaml
@@ -3,13 +3,19 @@ services:
         image: flowiseai/flowise
         container_name: flowise
         restart: always
-        #environment:
+        environment:
+            - DEBUG=true
+            - LOG_LEVEL=debug
+            - DATABASE_PATH=/root/.flowise
+            - APIKEY_PATH=/root/.flowise
+            - LOG_PATH=/root/.flowise/logs
+            - SECRETKEY_PATH=/root/.flowise
+            - BLOB_STORAGE_PATH=/root/.flowise/storage
         #    - CORS_ORIGINS=${CORS_ORIGINS}
         #    - IFRAME_ORIGINS=${IFRAME_ORIGINS}
         #    - FLOWISE_USERNAME=${FLOWISE_USERNAME}
         #    - FLOWISE_PASSWORD=${FLOWISE_PASSWORD}
         #    - FLOWISE_FILE_SIZE_LIMIT=${FLOWISE_FILE_SIZE_LIMIT}
-        #    - DEBUG=${DEBUG}
         #    - DATABASE_PATH=${DATABASE_PATH}
         #    - DATABASE_TYPE=${DATABASE_TYPE}
         #    - DATABASE_PORT=${DATABASE_PORT}
@@ -30,7 +36,7 @@ services:
         ports:
             - '3000:3000'
         volumes:
-            - ~/.flowise:/root/.flowise
+            - ./flowise:/root/.flowise
         entrypoint: /bin/sh -c "sleep 3; flowise start"
     postgres:
       image: ankane/pgvector
@@ -43,7 +49,7 @@ services:
       ports:
         - '5432:5432'
       volumes:
-        - ./data:/var/lib/postgresql/data
+        - ./pgsql:/var/lib/postgresql/data
     redis:
       image: redis
       container_name: redis
